# quickjspp

./: CMakeLists.txt  qjs2.cpp  quickjspp.hpp
quickjs/: Makefile  qjs.c  quickjs.c  quickjs.h
